# trello-mcp-server

./: ADD_FEATURES_GUIDE.md  ALIASES.md  ALIASES_INSTALLED.md  BACKEND_MISSING_FEATURES.md  CARD_REVIEW_GUIDE.md  CODE_REVIEW_GUIDE.md  CURSOR_CONTEXT.md  CURSOR_USAGE.md  INSTALLATION.md  KOTLIN_IMPLEMENTATION_GUIDE.md  LIVELIKE_ANALYSIS.md  LIVELIKE_COMPARISON.md  PROCESS_DOCUMENTATION.md  QUICK_REFERENCE.md  REACHU_TIPIO_SETUP.md  README.md  REPLIT_IMPLEMENTATION_PROMPT.md  SETUP_COMPLETE.md  SMART_CARDS_GUIDE.md  WORKFLOW_TOOLS.md  WORKFLOW_TOOLS_SUMMARY.md  add_all_members.py  add_feature.py  add_labels_and_members.py  all_trello_cards.txt  assign_members_correctly.py  change_member_assignment.py  create_viaplay_cards.py  detect_swift_changes.py  docker-compose.yml  generate_rebranding_cards.py  generate_trello_cards.py  get_all_boards.py  install-aliases.sh  install.sh  list_boards.py  main.py  pyproject.toml  requirements.txt  test_connection.py  (+5 more)
scripts/: MOVE_ENGAGEMENT_CARDS.md  README.md  __init__.py  add_newco_tipio_cards.py  analyze_developer_cards.py  analyze_developer_moves.py  analyze_developer_work.py  analyze_kotlin_sdk.py  analyze_priority_cards.py  complete_engagement_cards.py  complete_improvements_cards.json  create_engagement_improvements_cards.py  create_vio_kotlin_cards.py  create_vio_swift_cards.py  example_usage.sh  move_cards.py  move_critical_to_todo.py  move_engagement_cards.py  move_engagement_to_done.py  remove_green_label.py  remove_label_from_cards.py  review_and_move_cards.py  review_developer_work.py  update_card_descriptions.py  (+2 more)
(+12 files in other folders)
